[gd_scene load_steps=22 format=3 uid="uid://7q48jmg6staf"]

[ext_resource type="Script" path="res://guard.gd" id="1_au868"]
[ext_resource type="Texture2D" uid="uid://xd16jsysxsko" path="res://enemy_sprite_guard_leftleg.png" id="2_jma86"]
[ext_resource type="Texture2D" uid="uid://bytguu8amt8kn" path="res://enemy_sprite_guard_rightleg.png" id="3_p4y2e"]
[ext_resource type="Texture2D" uid="uid://boft6j7spo5ca" path="res://enemy_sprite_death.png" id="4_n46td"]
[ext_resource type="Texture2D" uid="uid://ckl6f2ibslqq4" path="res://splatter.png" id="4_s8ucs"]
[ext_resource type="AudioStream" uid="uid://bj5b2m0dmc71d" path="res://death.wav" id="5_fb3vs"]
[ext_resource type="AudioStream" uid="uid://orw6mnov275a" path="res://GuardDeathSounds/GuardDeath1.wav" id="7_k7jbi"]
[ext_resource type="AudioStream" uid="uid://gi4qkhop51vv" path="res://EnemyShootSounds/EnemyShoot1.wav" id="7_sftxx"]
[ext_resource type="AudioStream" uid="uid://chv77vepuuu3o" path="res://GuardDeathSounds/GuardDeath2.wav" id="8_rils3"]
[ext_resource type="AudioStream" uid="uid://dqi6dwyq6u57a" path="res://EnemyShootSounds/EnemyShoot2.wav" id="8_yeu24"]
[ext_resource type="AudioStream" uid="uid://dvoimhys5onol" path="res://EnemyShootSounds/EnemyShoot3.wav" id="9_2nsq6"]
[ext_resource type="AudioStream" uid="uid://brrncvq3mbiq6" path="res://GuardDeathSounds/GuardDeath3.wav" id="9_xnhi0"]
[ext_resource type="AudioStream" uid="uid://dj51hgf0jwjm5" path="res://EnemyShootSounds/EnemyShoot4.wav" id="10_2athg"]
[ext_resource type="AudioStream" uid="uid://0bpqxwo32vp6" path="res://GuardDeathSounds/GuardDeath4.wav" id="10_yklfb"]
[ext_resource type="AudioStream" uid="uid://bel2xjwq4ss2i" path="res://EnemyShootSounds/EnemyShoot5.wav" id="11_6lq3l"]
[ext_resource type="AudioStream" uid="uid://dqdt0p2vydg0m" path="res://EnemyShootSounds/EnemyShoot6.wav" id="12_46c4k"]
[ext_resource type="AudioStream" uid="uid://ceff3gh4uasbh" path="res://EnemyShootSounds/EnemyShoot7.wav" id="13_03e0l"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5wp7l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jma86")
}, {
"duration": 1.0,
"texture": ExtResource("3_p4y2e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_54b51"]
radius = 237.079

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qyi0k"]
streams_count = 4
random_volume_offset_db = 1.26
stream_0/stream = ExtResource("7_k7jbi")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_rils3")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_xnhi0")
stream_2/weight = 1.0
stream_3/stream = ExtResource("10_yklfb")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_x4r00"]
streams_count = 7
random_volume_offset_db = 0.23
stream_0/stream = ExtResource("7_sftxx")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_yeu24")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_2nsq6")
stream_2/weight = 1.0
stream_3/stream = ExtResource("10_2athg")
stream_3/weight = 1.0
stream_4/stream = ExtResource("11_6lq3l")
stream_4/weight = 1.0
stream_5/stream = ExtResource("12_46c4k")
stream_5/weight = 1.0
stream_6/stream = ExtResource("13_03e0l")
stream_6/weight = 1.0

[node name="Guard" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_au868")

[node name="Graphics" type="Node2D" parent="."]
scale = Vector2(0.870257, 0.854793)

[node name="Alive" type="AnimatedSprite2D" parent="Graphics"]
position = Vector2(-15, -18.3256)
scale = Vector2(0.22, 0.22)
sprite_frames = SubResource("SpriteFrames_5wp7l")

[node name="Dead" type="Sprite2D" parent="Graphics"]
visible = false
z_index = -1
scale = Vector2(0.17, 0.17)
texture = ExtResource("4_n46td")

[node name="Splatter" type="Sprite2D" parent="Graphics/Dead"]
visible = false
show_behind_parent = true
position = Vector2(11, -3)
texture = ExtResource("4_s8ucs")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -400)
collision_mask = 3

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_fb3vs")
max_distance = 3e+07
bus = &"sfx"

[node name="DeathCullTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-36, -8)
scale = Vector2(0.739464, 1.49384)
shape = SubResource("CircleShape2D_54b51")

[node name="GuardDeathSounds" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_qyi0k")
volume_db = 5.622
max_distance = 25155.0
attenuation = 0.233258
bus = &"sfx"

[node name="GuardShootSounds" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_x4r00")
max_distance = 10690.0
bus = &"sfx"

[connection signal="timeout" from="DeathCullTimer" to="." method="_on_death_cull_timer_timeout"]
